# voiceRAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
evals/: background_eval.py  eval_runner.py  judges.py  queries.txt  run_eval.py  schemas.py
evals/reports/: eval_20260305_111728.json  eval_20260305_111728.md
notebooks/: pdf_loader.ipynb  splitter.ipynb  test_embedding.ipynb  test_llm.ipynb
src/: config.py  dependencies.py  logger.py  main.py
src/db/: factory.py  init_db.py
src/models/: conversation.py
src/routers/: chat.py  file_upload.py  voice.py
src/schemas/api/: request_response.py
src/services/chunker/: text_chunker.py
src/services/document_intelligence/: __init__.py  md_chunker.py  sarvam_client.py
src/services/embedding/: embedding_service.py  factory.py
src/services/indexing/: doc_intel_indexer.py  indexer.py
src/services/pdf_parser/: parser.py
src/services/qdrant/: collection_config.py  factory.py
src/services/rag/: agentic_rag.py  conversation_store.py  prompt_builder.py  prompts.py  rag_service.py  states.py
src/services/search/: search_service.py
src/services/voice/: __init__.py  asr_handler.py  audio_utils.py  pipeline.py  tts_handler.py
static/: index.html
