[project]
name = "voicerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
